Adicionando registro  de usuario

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 POSTGRES_USER=postgres
-POSTGRES_PASSAWORD=postgres
-POSTGRES_DB=main
-DB_URL="postgresql+psycopg2://localhost/main?user=postgres&password=postgres"
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=bd_micro_service
+DB_URL="postgresql+psycopg2://localhost/bd_micro_service?user=postgres&password=postgres"
