--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-decouple = "^3.8"
 passlib = "^1.7.4"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.9"
+sqlalchemy-utils = "^0.41.2"
 
 
 [build-system]
