--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ passlib = "^1.7.4"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.9"
 sqlalchemy-utils = "^0.41.2"
+pytz = "^2024.1"
 
 
 [build-system]
